# ChangeLog for dev-embedded/icdprog
# Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-embedded/cvs-repo/gentoo-x86/dev-embedded/icdprog/ChangeLog,v 1.1 2003/12/06 05:43:07 robbat2 Exp $

*icdprog-0.3 (05 Dec 2003)

  05 Dec 2003; Robin H. Johnson <robbat2@gentoo.org> icdprog-0.3.ebuild,
  metadata.xml:
  initial ebuild by robbat2@gentoo.org
