@@ -1,15 +1,16 @@
-# Copyright 1999-2003 Gentoo Technologies, Inc.
+# Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-embedded/cvs-repo/gentoo-x86/dev-embedded/icdprog/Attic/icdprog-0.3.ebuild,v 1.1 2003/12/06 05:43:07 robbat2 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-embedded/cvs-repo/gentoo-x86/dev-embedded/icdprog/Attic/icdprog-0.3.ebuild,v 1.2 2004/03/05 09:22:46 dragonheart Exp $
 
 DESCRIPTION="Microchip PIC Programmer using ICD hardware"
 HOMEPAGE="http://${PN}.sf.net/"
 SRC_URI="mirror://sourceforge/${PN}/${P}.tar.gz"
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~x86"
+KEYWORDS="x86"
 IUSE=""
-DEPEND="sys-devel/gcc sys-apps/sed"
+DEPEND="sys-devel/gcc
+	>=sys-apps/sed-4"
 RDEPEND="" #we don't depend on anything after we are compiled
 S=${WORKDIR}/${P}
 
