@@ -1,13 +1,13 @@
-# Copyright 1999-2003 Gentoo Technologies, Inc.
+# Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-embedded/cvs-repo/gentoo-x86/dev-embedded/uisp/Attic/uisp-20030618.ebuild,v 1.1 2003/10/29 03:59:12 robbat2 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-embedded/cvs-repo/gentoo-x86/dev-embedded/uisp/Attic/uisp-20030618.ebuild,v 1.2 2004/03/05 09:17:15 dragonheart Exp $
 
 DESCRIPTION="Uisp is a tool for AVR microcontrollers which can interface to many hardware in-system programmers"
 SRC_URI="http://savannah.nongnu.org/download/uisp/${P}.tar.gz"
 HOMEPAGE="http://savannah.nongnu.org/projects/uisp"
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~x86"
+KEYWORDS="x86"
 IUSE=""
 DEPEND=""
 
