@@ -1,13 +1,13 @@
-# Copyright 1999-2003 Gentoo Technologies, Inc.
+# Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-embedded/cvs-repo/gentoo-x86/dev-embedded/xgpasm/xgpasm-1.0.ebuild,v 1.1 2003/12/06 04:32:21 robbat2 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-embedded/cvs-repo/gentoo-x86/dev-embedded/xgpasm/xgpasm-1.0.ebuild,v 1.2 2004/03/05 09:19:41 dragonheart Exp $
 
 DESCRIPTION="GUI for GPASM"
 HOMEPAGE="http://xizard.free.fr/logiciels/xgpasm/xgpasm.html"
 SRC_URI="http://xizard.free.fr/download/source/${P}.tar.gz"
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~x86"
+KEYWORDS="x86"
 IUSE="nls"
 DEPEND=">=x11-libs/gtk+-1.2
 		dev-embedded/gputils"
