@@ -1,6 +1,9 @@
 # ChangeLog for dev-embedded/uisp
-# Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-embedded/cvs-repo/gentoo-x86/dev-embedded/uisp/ChangeLog,v 1.1 2003/10/29 03:59:12 robbat2 Exp $
+# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-embedded/cvs-repo/gentoo-x86/dev-embedded/uisp/ChangeLog,v 1.2 2004/03/05 09:17:15 dragonheart Exp $
+
+  05 Mar 2004; Daniel Black <dragonheart@gentoo.org> uisp-20030618.ebuild:
+  Marked stable on x86
 
 *uisp-20030618 (28 Oct 2003)
 
