@@ -1,6 +1,9 @@
 # ChangeLog for dev-embedded/xgpasm
-# Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-embedded/cvs-repo/gentoo-x86/dev-embedded/xgpasm/ChangeLog,v 1.1 2003/12/06 04:32:21 robbat2 Exp $
+# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-embedded/cvs-repo/gentoo-x86/dev-embedded/xgpasm/ChangeLog,v 1.2 2004/03/05 09:19:41 dragonheart Exp $
+
+  05 Mar 2004; Daniel Black <dragonheart@gentoo.org> xgpasm-1.0.ebuild:
+  Marked stable on x86
 
 *xgpasm-1.0 (05 Dec 2003)
 
