@@ -1,6 +1,9 @@
 # ChangeLog for dev-embedded/icdprog
-# Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-embedded/cvs-repo/gentoo-x86/dev-embedded/icdprog/ChangeLog,v 1.1 2003/12/06 05:43:07 robbat2 Exp $
+# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-embedded/cvs-repo/gentoo-x86/dev-embedded/icdprog/ChangeLog,v 1.2 2004/03/05 09:22:46 dragonheart Exp $
+
+  05 Mar 2004; Daniel Black <dragonheart@gentoo.org> icdprog-0.3.ebuild:
+  Marked stable on x86
 
 *icdprog-0.3 (05 Dec 2003)
 
